// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bare early returns in for loops work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function f() {
      for (let i = 0; i < 100; i = i + 1) {
        return i+1;
        unreachable();
      }
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 1,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 3, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const f = wrap(() => {
      const startTime = get_time();
      for (let i = 0; boolOrErr(binaryOp(\\"<\\", 3, i, 100, 6, 18), 6, 2); i = binaryOp(\\"+\\", 3, i, 1, 6, 31)) {
        throwIfTimeout(native, startTime, get_time(), 6, 2);
        return {
          isTail: false,
          value: binaryOp(\\"+\\", 3, i, 1, 7, 11)
        };
        callIfFuncAndRightArgs(unreachable, 8, 4);
      }
      callIfFuncAndRightArgs(unreachable, 10, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 12, 2);
    }, \\"function f() {\\\\n  for (let i = 0; i < 100; i = i + 1) {\\\\n    return i + 1;\\\\n    unreachable();\\\\n  }\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 14, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Bare early returns in if statements work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function f() {
      if (true) {
        return 1;
        unreachable();
      } else {}
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 1,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 1, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const f = wrap(() => {
      if (boolOrErr(true, 6, 2)) {
        return {
          isTail: false,
          value: 1
        };
        callIfFuncAndRightArgs(unreachable, 8, 4);
      } else {}
      callIfFuncAndRightArgs(unreachable, 10, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 12, 2);
    }, \\"function f() {\\\\n  if (true) {\\\\n    return 1;\\\\n    unreachable();\\\\n  } else {}\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 14, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Bare early returns in while loops work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function f() {
      while (true) {
        return 1;
        unreachable();
      }
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 1,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 3, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const f = wrap(() => {
      const startTime = get_time();
      while (boolOrErr(true, 6, 2)) {
        throwIfTimeout(native, startTime, get_time(), 6, 2);
        return {
          isTail: false,
          value: 1
        };
        callIfFuncAndRightArgs(unreachable, 8, 4);
      }
      callIfFuncAndRightArgs(unreachable, 10, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 12, 2);
    }, \\"function f() {\\\\n  while (true) {\\\\n    return 1;\\\\n    unreachable();\\\\n  }\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 14, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Bare early returns work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function f() {
      return 1;
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 1,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 1, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const f = wrap(() => {
      return {
        isTail: false,
        value: 1
      };
      callIfFuncAndRightArgs(unreachable, 7, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 9, 2);
    }, \\"function f() {\\\\n  return 1;\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 11, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Calling unreachable results in error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function f() {
      unreachable();
      return 0;
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [
    TypeError {
      "expected": "number",
      "got": "boolean",
      "location": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 3,
        },
        "start": Position {
          "column": 9,
          "line": 3,
        },
      },
      "severity": "Error",
      "side": " on right hand side of operation",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 3: Expected number on right hand side of operation, got boolean.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Recursive call early returns in for loops work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function id(x) {
      return x;
    }
    function f() {
      for (let i = 0; i < 100; i = i + 1) {
        return id(i+1) + id(i+2);
      }
      return 0;
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 3,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 3, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const id = wrap(x => {
      return {
        isTail: false,
        value: x
      };
    }, \\"function id(x) {\\\\n  return x;\\\\n}\\", native);
    const f = wrap(() => {
      const startTime = get_time();
      for (let i = 0; boolOrErr(binaryOp(\\"<\\", 3, i, 100, 9, 18), 9, 2); i = binaryOp(\\"+\\", 3, i, 1, 9, 31)) {
        throwIfTimeout(native, startTime, get_time(), 9, 2);
        return {
          isTail: false,
          value: binaryOp(\\"+\\", 3, callIfFuncAndRightArgs(id, 10, 11, binaryOp(\\"+\\", 3, i, 1, 10, 14)), callIfFuncAndRightArgs(id, 10, 23, binaryOp(\\"+\\", 3, i, 2, 10, 26)), 10, 11)
        };
      }
      return {
        isTail: false,
        value: 0
      };
    }, \\"function f() {\\\\n  for (let i = 0; i < 100; i = i + 1) {\\\\n    return id(i + 1) + id(i + 2);\\\\n  }\\\\n  return 0;\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 14, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"id\\", {
      kind: \\"const\\",
      getValue: () => {
        return id;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Recursive call early returns in if statements work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function id(x) {
      return x;
    }
    function f() {
      if (true) {
        return id(1) + id(2);
        unreachable();
      } else {}
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 3,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 1, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const id = wrap(x => {
      return {
        isTail: false,
        value: x
      };
    }, \\"function id(x) {\\\\n  return x;\\\\n}\\", native);
    const f = wrap(() => {
      if (boolOrErr(true, 9, 2)) {
        return {
          isTail: false,
          value: binaryOp(\\"+\\", 1, callIfFuncAndRightArgs(id, 10, 11, 1), callIfFuncAndRightArgs(id, 10, 19, 2), 10, 11)
        };
        callIfFuncAndRightArgs(unreachable, 11, 4);
      } else {}
      callIfFuncAndRightArgs(unreachable, 13, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 15, 2);
    }, \\"function f() {\\\\n  if (true) {\\\\n    return id(1) + id(2);\\\\n    unreachable();\\\\n  } else {}\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 17, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"id\\", {
      kind: \\"const\\",
      getValue: () => {
        return id;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Recursive call early returns in while loops work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function id(x) {
      return x;
    }
    function f() {
      while (true) {
        return id(1) + id(2);
        unreachable();
      }
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 3,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 3, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const id = wrap(x => {
      return {
        isTail: false,
        value: x
      };
    }, \\"function id(x) {\\\\n  return x;\\\\n}\\", native);
    const f = wrap(() => {
      const startTime = get_time();
      while (boolOrErr(true, 9, 2)) {
        throwIfTimeout(native, startTime, get_time(), 9, 2);
        return {
          isTail: false,
          value: binaryOp(\\"+\\", 3, callIfFuncAndRightArgs(id, 10, 11, 1), callIfFuncAndRightArgs(id, 10, 19, 2), 10, 11)
        };
        callIfFuncAndRightArgs(unreachable, 11, 4);
      }
      callIfFuncAndRightArgs(unreachable, 13, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 15, 2);
    }, \\"function f() {\\\\n  while (true) {\\\\n    return id(1) + id(2);\\\\n    unreachable();\\\\n  }\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 17, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"id\\", {
      kind: \\"const\\",
      getValue: () => {
        return id;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Recursive call early returns work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function id(x) {
      return x;
    }
    function f() {
      return id(1) + id(2);
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 3,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 1, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const id = wrap(x => {
      return {
        isTail: false,
        value: x
      };
    }, \\"function id(x) {\\\\n  return x;\\\\n}\\", native);
    const f = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"+\\", 1, callIfFuncAndRightArgs(id, 9, 9, 1), callIfFuncAndRightArgs(id, 9, 17, 2), 9, 9)
      };
      callIfFuncAndRightArgs(unreachable, 10, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 12, 2);
    }, \\"function f() {\\\\n  return id(1) + id(2);\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 14, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"id\\", {
      kind: \\"const\\",
      getValue: () => {
        return id;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Tail call early returns in for loops work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function id(x) {
      return x;
    }
    function f() {
      for (let i = 0; i < 100; i = i + 1) {
        return id(i+1);
        unreachable();
      }
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 1,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 3, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const id = wrap(x => {
      return {
        isTail: false,
        value: x
      };
    }, \\"function id(x) {\\\\n  return x;\\\\n}\\", native);
    const f = wrap(() => {
      const startTime = get_time();
      for (let i = 0; boolOrErr(binaryOp(\\"<\\", 3, i, 100, 9, 18), 9, 2); i = binaryOp(\\"+\\", 3, i, 1, 9, 31)) {
        throwIfTimeout(native, startTime, get_time(), 9, 2);
        return {
          isTail: true,
          function: id,
          functionName: \\"id\\",
          arguments: [binaryOp(\\"+\\", 3, i, 1, 10, 14)],
          line: 10,
          column: 11
        };
        callIfFuncAndRightArgs(unreachable, 11, 4);
      }
      callIfFuncAndRightArgs(unreachable, 13, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 15, 2);
    }, \\"function f() {\\\\n  for (let i = 0; i < 100; i = i + 1) {\\\\n    return id(i + 1);\\\\n    unreachable();\\\\n  }\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 17, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"id\\", {
      kind: \\"const\\",
      getValue: () => {
        return id;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Tail call early returns in if statements work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function id(x) {
      return x;
    }
    function f() {
      if (true) {
        return id(1);
        unreachable();
      } else {}
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 1,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 1, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const id = wrap(x => {
      return {
        isTail: false,
        value: x
      };
    }, \\"function id(x) {\\\\n  return x;\\\\n}\\", native);
    const f = wrap(() => {
      if (boolOrErr(true, 9, 2)) {
        return {
          isTail: true,
          function: id,
          functionName: \\"id\\",
          arguments: [1],
          line: 10,
          column: 11
        };
        callIfFuncAndRightArgs(unreachable, 11, 4);
      } else {}
      callIfFuncAndRightArgs(unreachable, 13, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 15, 2);
    }, \\"function f() {\\\\n  if (true) {\\\\n    return id(1);\\\\n    unreachable();\\\\n  } else {}\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 17, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"id\\", {
      kind: \\"const\\",
      getValue: () => {
        return id;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Tail call early returns in while loops work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function id(x) {
      return x;
    }
    function f() {
      while (true) {
        return id(1);
        unreachable();
      }
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 1,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 3, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const id = wrap(x => {
      return {
        isTail: false,
        value: x
      };
    }, \\"function id(x) {\\\\n  return x;\\\\n}\\", native);
    const f = wrap(() => {
      const startTime = get_time();
      while (boolOrErr(true, 9, 2)) {
        throwIfTimeout(native, startTime, get_time(), 9, 2);
        return {
          isTail: true,
          function: id,
          functionName: \\"id\\",
          arguments: [1],
          line: 10,
          column: 11
        };
        callIfFuncAndRightArgs(unreachable, 11, 4);
      }
      callIfFuncAndRightArgs(unreachable, 13, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 15, 2);
    }, \\"function f() {\\\\n  while (true) {\\\\n    return id(1);\\\\n    unreachable();\\\\n  }\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 17, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"id\\", {
      kind: \\"const\\",
      getValue: () => {
        return id;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;

exports[`Tail call early returns work: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    function unreachable() {
      return 1 < true; // Will cause an error
    }
    function id(x) {
      return x;
    }
    function f() {
      return id(1);
      unreachable();
      return 0;
      unreachable();
    }
    f();
  ",
  "displayResult": Array [],
  "errors": Array [],
  "parsedErrors": "",
  "pretranspiled": "",
  "result": 1,
  "resultStatus": "finished",
  "transpiled": "const native = nativeStorage;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
let lastStatementResult = undefined;
const globals = native.globals;
{
  {
    const unreachable = wrap(() => {
      return {
        isTail: false,
        value: binaryOp(\\"<\\", 1, 1, true, 3, 9)
      };
    }, \\"function unreachable() {\\\\n  return 1 < true;\\\\n}\\", native);
    const id = wrap(x => {
      return {
        isTail: false,
        value: x
      };
    }, \\"function id(x) {\\\\n  return x;\\\\n}\\", native);
    const f = wrap(() => {
      return {
        isTail: true,
        function: id,
        functionName: \\"id\\",
        arguments: [1],
        line: 9,
        column: 9
      };
      callIfFuncAndRightArgs(unreachable, 10, 2);
      return {
        isTail: false,
        value: 0
      };
      callIfFuncAndRightArgs(unreachable, 12, 2);
    }, \\"function f() {\\\\n  return id(1);\\\\n  unreachable();\\\\n  return 0;\\\\n  unreachable();\\\\n}\\", native);
    lastStatementResult = eval(\\"callIfFuncAndRightArgs(f, 14, 0);\\");
    globals.variables.set(\\"unreachable\\", {
      kind: \\"const\\",
      getValue: () => {
        return unreachable;
      }
    });
    globals.variables.set(\\"id\\", {
      kind: \\"const\\",
      getValue: () => {
        return id;
      }
    });
    globals.variables.set(\\"f\\", {
      kind: \\"const\\",
      getValue: () => {
        return f;
      }
    });
  }
}
lastStatementResult;
",
  "visualiseListResult": Array [],
}
`;
